--- a/app/views/tasks/collection_objects/chronology/index.html.erb
+++ b/app/views/tasks/collection_objects/chronology/index.html.erb
@@ -12,13 +12,13 @@
     .where(project_id: sessions_current_project_id)
     .where('collecting_events.start_date_year is not null')
     .group('collecting_events.start_date_year')
-    .count, 
+    .count,
       discrete: true, ytitle: 'Count', xtitle: 'Year collected', height: '400px', download: true
     %>
 
     <%= tag.em CollectionObject.joins(:collecting_event)
     .where(project_id: sessions_current_project_id)
     .where('collecting_events.start_date_year is null')
-    .group('collecting_events.start_date_year').count.first.last.to_s + ' Collection object records without collecting event date start year.' %>
+    .group('collecting_events.start_date_year').count.to_s + ' Collection object records without collecting event date start year.' %>
   </div>
 </div>
