--- a/app/views/tasks/collection_objects/classification_summary/_report.html.erb
+++ b/app/views/tasks/collection_objects/classification_summary/_report.html.erb
@@ -18,7 +18,7 @@
 
   <div style="clear: both;">
     <br>
-    <p> Without any preparation data: <%= v[:no_data].collect{|id, n| link_to(n, collection_objects_filter_task_path(ancestor_id: id)) }.join(', ').html_safe %>.</p>
+    <p> Without any preparation data: <%= v[:no_data].collect{|id, n| link_to(n, collection_objects_filter_task_path(taxon_name_id: id, descendants: true)) }.join(', ').html_safe %>.</p>
   </div>
 
 <div style="clear: both;">
