Fix browse collecting event

--- a/app/views/tasks/collecting_events/browse/index.html.erb
+++ b/app/views/tasks/collecting_events/browse/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="task_header"> Browse collecting events</h1>
 
-<div id="browse-view" data-collection-object-id="<%= @collecting_event.id %>">
+<div id="browse-collecting-event" class="browse-view" data-collection-object-id="<%= @collecting_event.id %>">
   <div id="browse-collection-object" class="panel content">
     <div class="flex-separate middle">
 
