--- a/app/views/tasks/nomenclature/browse/index.html.erb
+++ b/app/views/tasks/nomenclature/browse/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="task_header"> Browse nomenclature and classification </h1>
 
-<div id="browse-view" data-taxon-id="<%= @taxon_name.id %>">
+<div id="browse-nomenclature" class="browse-view" data-taxon-id="<%= @taxon_name.id %>">
   <div class="panel content">
     <div class="flex-separate middle">
 
