--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -18,6 +18,11 @@
     <%= radio_button_tag 'project[clear_api_access_token]', true %> <%= f.label :clear_api_access_token %> <em> Disables public API access to all project data. </em>
   </div>
 
+  <div class="field">
+    <%= f.label :data_curation_issue_tracker_url %><br>
+    <%= f.text_field :data_curation_issue_tracker_url %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
