Fix recent list

--- a/app/views/shared/data/all/index.html.erb
+++ b/app/views/shared/data/all/index.html.erb
@@ -22,11 +22,7 @@
   </div>
 <% end %>
 
-<div class=" recent_updates no-shadow "> 
-  <div class="item item1 center_text">
-      <div class="content">
-      <h2 class="no-borders">Recent updates</h2>
+<div class="recent_updates no-shadow"> 
+<h2 class="no-borders center_text">Recent updates</h2>
       <%= recent_objects_list(@hub_model_metadata.klass, @recent_objects) -%>
-    </div>
-  </div>
 </div>
