--- a/app/assets/stylesheets/helpers/list/lists.scss
+++ b/app/assets/stylesheets/helpers/list/lists.scss
@@ -3,43 +3,42 @@
   position: absolute;
   top: 45%;
   left: 50%;
-
   transform: translateX(-50%);
+
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    width: 1080px;
 
     li {
-      width: 1040px;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
       padding: 5px;
-      border-bottom:1px solid $navigation_border;
-      text-align: right;
       align-items: center;
+      border-bottom:1px solid $navigation_border;
       font-size: 12px;
       cursor: pointer;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
     }
 
     li:hover {
       background-color: $navigation_background;
       opacity: 1 !important;
     }
+    .navigation-item {
+      display: none;
+    }
     a {
       text-align: left;
       text-decoration: none;
     }
-    a:nth-child(2) {
-      align-items: center;
-      text-align: left;
-      text-decoration: none;
-      display: none;
+  }
 
-    }
+  em {
+    display: flex;
+    justify-content: center;
+
   }
 }
 
