--- a/app/views/shared/data/project/_recent_objects_list.html.erb
+++ b/app/views/shared/data/project/_recent_objects_list.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <% recent_objects.each do |r| -%>
-    <li> <%= object_link(r) -%> <%= edit_object_link(r) -%>  <%= object_time_since_update_tag(r) -%> ago </li>
+    <li><div><%= object_link(r) -%></div> <div><%= edit_object_link(r) -%>  <%= object_time_since_update_tag(r) -%> ago </div></li>
   <% end %>
 </ul>
 <%= content_tag(:em, "No recently updated or created records.") if recent_objects.empty? -%>
